# raytracer

./: .gitignore  CMakeLists.txt  README.md
RayTracer/RayTracer/: Camera.h  DiffuseMaterial.cpp  DiffuseMaterialFactory.cpp  Entity.h  Light.h  LightFactory.h  LightFactoryDepot.cpp  LightRecord.h  MaterialFactory.h  MaterialFactoryDepot.cpp  MaterialFactoryDepot.h  Plane.h  PlaneFactory.h  PointLight.cpp  PointLight.h  PointLightFactory.h  PrimitiveFactoryDepot.cpp  PrimitiveFactoryDepot.h  Renderer.cpp  Renderer.h  Scene.h  SceneScript.txt  SpecularMaterial.cpp  SpecularMaterialFactory.cpp  Sphere.h  SphereFactory.h  Tracer.cpp  Tracer.h  Vector3.cpp  Vector3.h  main.cpp
src/: Camera.cpp  DiffuseMaterial.cpp  DiffuseMaterial.h  DiffuseMaterialFactory.h  DirectionalLight.cpp  DirectionalLight.h  DirectionalLightFactory.cpp  DirectionalLightFactory.h  Entity.cpp  HitRecord.h  LightFactoryDepot.h  Material.h  Plane.cpp  PlaneFactory.cpp  PointLight.cpp  PointLightFactory.cpp  Primitive.h  PrimitiveFactory.h  Renderer.cpp  Scene.cpp  SceneScript.txt  SpecularMaterial.h  SpecularMaterialFactory.h  Sphere.cpp  SphereFactory.cpp  Tracer.cpp  Tracer.h  main.cpp
tools/: render_raw_file.py
